--- a/Projekti.html
+++ b/Projekti.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health And Diet</title>
     <link rel="stylesheet" href="css1.css">
-    <h2>tese</h2>
 </head>
 <body>
     <header class="header">
@@ -19,7 +18,7 @@
         </nav>
     </header>
     <div class="Login">
-        aaa
+        
         <h2>Log In</h2>
         <div class="apple">
             <img src="Apple_logo_white.svg.png" alt="">Sign in with Apple
@@ -36,12 +35,23 @@
         <form>
             <input type="text" placeholder="Username">
             <input type="password" placeholder="Password">
-            <label for="remember">
-                <input type="checkbox">Remember Me
-            </label>
-            <button type="submit" class="siginb">Sign In</button>
+            <div class="remember">
+                <input type="checkbox" id="rememberMe">
+                <label for="rememberMe">Remember Me</label>
+            </div>
+            <button type="submit" class="signinb">Sign In</button>
         </form>
         <a class="forgot" href="#">Forgot Password?</a>
     </div>
+    <footer class="footer">
+        <div class="content">
+            <p>© 2025 Health And Diet. All rights reserved.</p>
+            <div class="links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
