--- a/Projektifq2.html
+++ b/Projektifq2.html
@@ -23,19 +23,24 @@
     </div>
     <div class="workouts">
         <div class="wo">
-            <img src="Musclebuilding.png" alt="">Muscle Building
+            <img src="Musclebuilding.png" alt=""><p class="tit">Muscle Building</p>
+            <p class="pershkrimi">Build more muscle mass through structured resistance training. This category focuses on workouts that increase muscle size, strength, and endurance. Perfect for those who want to grow stronger and develop a more defined physique.</p>
         </div>
          <div class="wo">
-            <img src="FatLoss2.jpg" alt="">Fat Loss
+            <img src="FatLoss2.jpg" alt=""><p class="tit">Fat Loss</p>
+            <p class="pershkrimi">Burn calories and lose body fat effectively. These workouts combine cardio, strength training, and high-intensity movements to help you slim down, improve energy levels, and reach your weight-loss goals.</p>
         </div>
         <div class="wo">
-            <img src="IncreaseStrength.jpg" alt="">Increase Strength
+            <img src="IncreaseStrength.jpg" alt=""><p class="tit">Increase Strength</p>
+            <p class="pershkrimi">Improve raw power and overall strength. This category includes workouts that target major muscle groups using heavier loads and lower repetitions. Ideal for athletes or anyone who wants to lift heavier and feel stronger.</p>
         </div>
         <div class="wo">
-            <img src="AbsBuilding.png" alt="">Ab Building
+            <img src="AbsBuilding.png" alt=""><p class="tit">Ab Building</p>
+            <p class="pershkrimi">Develop strong and defined abdominal muscles. These workouts focus on core strength, stability, and shaping your midsection. Great for improving posture, balance, and overall body control.</p>
         </div>
          <div class="wo">
-            <img src="Stamina.png" alt="">Stamina Increase
+            <img src="Stamina.png" alt=""><p class="tit">Stamina Increase</p>
+            <p class="pershkrimi">Boost your endurance and cardiovascular performance. This category helps improve how long you can perform physical activity without getting tired. Perfect for runners, athletes, or anyone looking to increase daily energy.</p>
         </div>
     </div>
     <footer class="footer">
