--- a/Projekti.html
+++ b/Projekti.html
@@ -10,8 +10,8 @@
     <header class="header">
         <div class="logo"><img src="Logo1.png" alt="logo"></div>
         <nav class="nav">
-            <a href="#">Workouts</a>
-            <a href="#">Programs</a>
+            <a href="Projektifq2.html">Workouts</a>
+            <a href="faqja3.html">Programs</a>
             <a href="#">Healthy Living</a>
             <a href="#">About</a>
             <a href="#">Membership</a>
@@ -20,28 +20,24 @@
     <div class="Login">
         
         <h1>Log In</h1>
-        <div class="apple">
-            <img src="Apple_logo_white.svg.png" alt="">Sign in with Apple
-        </div>
-        <div class="facebook">
-            <img src="facebook-app-round-white-icon.png" alt="">Sign in with Facebook
-        </div>
-        <div class="google">
-            <img src="google-white-icon.png" alt="">Sign in with Google
-        </div>
-        <div class="divider">
-            <p>or</p>
-        </div>
+        <p class="info">Please give your information to continue!</p>
         <form>
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
+            <div class="formcomponents">
+                <input type="text" placeholder="Username">
+                <input type="password" placeholder="Password">
+            </div>
             <div class="remember">
-                <input type="checkbox" id="rememberMe">
-                <label for="rememberMe">Remember Me</label>
+                <div class="remember-left">
+                    <input type="checkbox" id="rememberMe">
+                    <label for="rememberMe">Remember Me</label>
+                </div>
+                <a class="forgot" href="#">Forgot Password?</a>
             </div>
             <button type="submit" class="signinb">Sign In</button>
         </form>
-        <a class="forgot" href="#">Forgot Password?</a>
+        <p>Dont have an account?
+        <a class="forgot" href="#">Create One</a>
+        </p>
     </div>
     <footer class="footer">
         <div class="content">
