--- a/Projektifq2.html
+++ b/Projektifq2.html
@@ -10,8 +10,8 @@
     <header class="header">
         <div class="logo"><img src="Logo1.png" alt="logo"></div>
         <nav class="nav">
-            <a href="#">Workouts</a>
-            <a href="#">Programs</a>
+            <a href="Projektifq2.html">Workouts</a>
+            <a href="faqja3.html">Programs</a>
             <a href="#">Healthy Living</a>
             <a href="#">About</a>
             <a href="#">Membership</a>
