--- a/faqja4.html
+++ b/faqja4.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health And Diet</title>
-    <link rel="stylesheet" href="css1.css">
+    <title>Faqja4</title>
+    <link rel="stylesheet" href="css4.css">
 </head>
 <body>
     <header class="header">
@@ -17,25 +17,25 @@
             <a href="#">Membership</a>
         </nav>
     </header>
-    <div class="Login">
+    </header>
+    <div class="Signup">
         
-        <h1>Log In</h1>
+        <h1>Sign Up</h1>
         <p class="info">Please give your information to continue!</p>
         <form>
-            <input type="text" id="username" placeholder="Username" required minlength="6">
-            <input type="password" id="password" placeholder="Password" required minlength="8">
+            <input type="text" id="name" placeholder="First Name" >
+            <input type="text" id="lastname" placeholder="Last Name" >
+            <input type="text" id="height" placeholder="Height" >
+            <input type="text" id="weight" placeholder="Weight" >
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Password">
+            <input type="password" id="confirmpassword" placeholder="Confirm Password">
             <div class="remember">
-                <div class="remember-left">
                     <input type="checkbox" id="rememberMe">
                     <label for="rememberMe">Remember Me</label>
-                </div>
-                <a class="forgot" href="#">Forgot Password?</a>
             </div>
-            <button type="submit" class="signinb">Sign In</button>
+            <button type="submit" class="signupb">Sign Up</button>
         </form>
-        <p>Dont have an account?
-        <a class="forgot" href="faqja4.html">Create One</a>
-        </p>
     </div>
     <footer class="footer">
         <div class="content">
@@ -47,5 +47,7 @@
             </div>
         </div>
     </footer>
+</body>
+</html>
 </body>
 </html>
