--- a/faqja3.html
+++ b/faqja3.html
@@ -12,6 +12,8 @@
         <nav class="nav">
             <a href="Projektifq2.html">Workouts</a>
             <a href="faqja3.html">Programs</a>
+            <a href="#">Workouts</a>
+            <a href="#">Programs</a>
             <a href="#">Healthy Living</a>
             <a href="#">About</a>
             <a href="#">Membership</a>
