final touches and fq5

--- a/faqja3.html
+++ b/faqja3.html
@@ -12,8 +12,6 @@
         <nav class="nav">
             <a href="Projektifq2.html">Workouts</a>
             <a href="faqja3.html">Programs</a>
-            <a href="#">Workouts</a>
-            <a href="#">Programs</a>
             <a href="#">Healthy Living</a>
             <a href="#">About</a>
             <a href="#">Membership</a>
@@ -28,7 +26,7 @@
         </p>
 
         <div class="program">
-            <h2>Full Body Workout</h2>
+            <h2><a href="faqja5.html">Full Body Workout</a></h2>
             <p>3 days per week, simple exercises for the whole body.</p>
             <ul>
                 <li>Day 1: Upper body</li>
