--- a/faqja4.html
+++ b/faqja4.html
@@ -16,20 +16,26 @@
             <a href="#">About</a>
             <a href="#">Membership</a>
         </nav>
-    </header>
-    </header>
+        </header>
     <div class="Signup">
         
         <h1>Sign Up</h1>
         <p class="info">Please give your information to continue!</p>
-        <form>
+        <form id="signup">
             <input type="text" id="name" placeholder="First Name" >
+            <p id="nameError" style="color:red; font-size:14px;"></p>
             <input type="text" id="lastname" placeholder="Last Name" >
+            <p id="lastNameError" style="color:red; font-size:14px;"></p>
             <input type="text" id="height" placeholder="Height" >
+            <p id="heightError" style="color:red; font-size:14px;"></p>
             <input type="text" id="weight" placeholder="Weight" >
+            <p id="weightError" style="color:red; font-size:14px;"></p>
             <input type="email" id="email" placeholder="Email">
+            <p id="emailError" style="color:red; font-size:14px;"></p>
             <input type="password" id="password" placeholder="Password">
+            <p id="passError" style="color:red; font-size:14px;"></p>
             <input type="password" id="confirmpassword" placeholder="Confirm Password">
+            <p id="cpassError" style="color:red; font-size:14px;"></p>
             <div class="remember">
                     <input type="checkbox" id="rememberMe">
                     <label for="rememberMe">Remember Me</label>
@@ -47,6 +53,7 @@
             </div>
         </div>
     </footer>
+    <script src="script4.js"></script>
 </body>
 </html>
 </body>
